--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -41,11 +41,27 @@
     @process={{this.process}}
   />
 
-  <Process::Diagram::Visual
-    @canEdit={{this.canEdit}}
-    @process={{this.process}}
-    @trackDownloadFileEvent={{this.trackDownloadFileEvent}}
-  />
+  <span>
+    <div class="au-u-flex au-u-flex--between au-u-margin-bottom-small">
+      <AuHeading @level="2" @skin="3">Diagrammen</AuHeading>
+      <AuButtonGroup>
+        <AuLink
+          @route="processes.process.diagrams"
+          @model={{this.process.id}}
+          @skin="button-naked"
+          @icon="pencil"
+        >
+          Wijzig
+        </AuLink>
+      </AuButtonGroup>
+    </div>
+    <DiagramList::DiagramsInTabs
+      @canEdit={{this.canEdit}}
+      @diagramList={{@model.diagramList}}
+      @processId={{this.process.id}}
+      {{!-- @trackDownloadFileEvent={{this.trackDownloadFileEvent}} // TODO - do not forget to track moving download button --}}
+    />
+  </span>
 
   {{#if (and this.process.isBlueprint this.process.isPublishedByAbbOrDv)}}
     <Process::IcrCard @canEdit={{this.canEdit}} @process={{this.process}} />
