Oph-763 | Upload multiple diagrams (#165)
* feat: create new page where we show all diagrams

Refs: oph-861

* feat: create file viewer + metadata-card component

Refs: oph-861

* feat: show table with diagram files in diagram-list

Refs: oph-861

* feat: make the title of the diagram file in the diagram-list clickable

Refs: oph-861

* feat: show a lock on older versions and you can only edit the current one

Refs: oph-861

* refactor: remove tests that are not used

Refs: oph-861

* refactor: creating a new process can now be done with multiple diagram files

Refs : oph-763

* refactor: update diagrams on a process (vervang) is also possible

This with the bug that the latest diagram is not loaded in the viewer without a refresh

Refs: oph-763

* fix: the sorting of the diagram lists

Refs: oph-763

* fix: diagram file not loaded on process page because of filtering

Refs: oph-763

* fix: when removed a file from the list it will re open the lists first diagramfile

Refs: oph-763

* fix: the showcased file is the same as the first on the diagram list overview page (by position)

Refs: oph-763

* fix: fetch latest list when upload is done

Refs: ph-763

* refactor: extract the bpmn elements again on upload of files

Refs: oph-763

* Oph-781 | Add tabs for multiple diagrams (#168)

* feat: create component to show the diagrams in tabs

Refs: oph-781

* refactor: diagrams page to use the new custom diagram classes

Refs: oph-781

* refactor: use the diagrams as tabs component instead of process:visual on process detail page

Refs: oph-781

* feat: make the scrollbar thinner

Refs: oph-781

* refactor: move the header out of the diagrams as tabs component

Refs: oph-781

* refactor: make breadcrum of diagrams page "diagrammen"

Refs: oph-781

* fix: linting issue in pipeline => comments in css file

Refs: oph-781

* Oph 781 bring back the replace button for diagrams (#169)

* feat: show a big button to create a new diagram version at the top of the diagrams page

Refs

--- a/app/components/process/diagram/visual.hbs
+++ b/app/components/process/diagram/visual.hbs
@@ -95,6 +95,7 @@
   @header="Vervang diagram"
   @title="BPMN- of Visiobestand selecteren"
   @helpTextDragDrop="Bestand wordt meteen verwerkt en toegevoegd aan bibliotheek na selectie"
+  @multiple={{true}}
   @accept=".bpmn,.vsdx"
   @isSensitiveDataDetectInUploadFlow={{false}}
   @updateModel={{this.addFileToProcess}}
