--- a/app/templates/shared-processes/index.hbs
+++ b/app/templates/shared-processes/index.hbs
@@ -123,6 +123,7 @@
   @header="Voeg proces toe"
   @title="BPMN- of Visiobestand selecteren"
   @helpTextDragDrop="Bestand wordt meteen verwerkt en toegevoegd aan bibliotheek na selectie"
+  @multiple={{true}}
   @accept=".bpmn,.vsdx"
   @isSensitiveDataDetectInUploadFlow={{false}}
   @createModel={{this.createProcess}}
