feat: add tracking of downloaded files to the download file component
Refs: oph-903

--- a/app/components/diagram-list/table.hbs
+++ b/app/components/diagram-list/table.hbs
@@ -106,6 +106,6 @@
 <File::DownloadModal
   @isModalOpen={{this.fileToDownload}}
   @onModalClosed={{fn (mut this.fileToDownload) undefined}}
-  @onDownloadSuccesful={{fn (mut this.fileToDownload) undefined}}
+  @onDownloadSuccesful={{this.onFileDownloadedSuccessful}}
   @fileModel={{this.fileToDownload}}
 />
