refactor: file upload model has updated arguments updateModel and createModel
Refs: oph-860

--- a/app/templates/processes/process/diagrams.hbs
+++ b/app/templates/processes/process/diagrams.hbs
@@ -90,7 +90,7 @@
   @multiple={{true}}
   @accept=".bpmn,.vsdx"
   @isSensitiveDataDetectInUploadFlow={{false}}
-  @updateProcess={{this.addFileToProcess}}
+  @updateModel={{this.addFileToProcess}}
   @extractBpmnElements={{this.extractBpmnElements}}
   @onFinishUpload={{this.diagramUploaded}}
   @modalOpen={{this.isCreateModalOpen}}
