--- a/app/templates/shared-processes/index.hbs
+++ b/app/templates/shared-processes/index.hbs
@@ -126,7 +126,7 @@
   @multiple={{true}}
   @accept=".bpmn,.vsdx"
   @isSensitiveDataDetectInUploadFlow={{false}}
-  @createProcess={{this.createProcess}}
+  @createModel={{this.createProcess}}
   @extractBpmnElements={{this.extractBpmnElements}}
   @onFinishUpload={{this.diagramUploaded}}
   @modalOpen={{this.uploadModalOpened}}
