--- a/app/components/process/attachments.hbs
+++ b/app/components/process/attachments.hbs
@@ -132,7 +132,7 @@
   @helpTextDragDrop="Bestand wordt meteen toegevoegd aan bibliotheek na selectie"
   @forbidden=".bpmn,.vsdx"
   @multiple="true"
-  @updateProcess={{this.addFileToProcess}}
+  @updateModel={{this.addFilesToProcess}}
   @onFinishUpload={{this.attachmentsUploaded}}
   @modalOpen={{this.addModalOpened}}
   @closeModal={{this.closeAddModal}}
