--- a/app/components/process/diagram/visual.hbs
+++ b/app/components/process/diagram/visual.hbs
@@ -98,7 +98,7 @@
   @multiple={{true}}
   @accept=".bpmn,.vsdx"
   @isSensitiveDataDetectInUploadFlow={{false}}
-  @updateProcess={{this.addFileToProcess}}
+  @updateModel={{this.addFileToProcess}}
   @extractBpmnElements={{this.extractBpmnElements}}
   @onFinishUpload={{this.diagramUploaded}}
   @modalOpen={{this.replaceModalOpened}}
