fix: ICR attachments can be multiple
Refs: oph-860

--- a/app/components/icr/attachments.hbs
+++ b/app/components/icr/attachments.hbs
@@ -133,7 +133,7 @@
   @helpTextDragDrop="Bestand wordt meteen toegevoegd aan bibliotheek na selectie"
   @multiple="true"
   @modelName="Informatie asset"
-  @updateModel={{this.addFileToIcr}}
+  @updateModel={{this.addFilesToIcr}}
   @onFinishUpload={{this.attachmentsUploaded}}
   @modalOpen={{this.addModalOpened}}
   @closeModal={{this.closeAddModal}}
