refactor: attachments of process are fetched by the file id
Refs: oph-860

--- a/app/components/process/attachments.hbs
+++ b/app/components/process/attachments.hbs
@@ -101,12 +101,15 @@
             <td>{{date-format attachment.created true}}</td>
             <td>{{attachment._source}}
               {{#if attachment.informationAsset}}
+                Informatie asset
                 <AuLink
                   @route="information-assets.edit"
                   @model={{attachment.informationAsset.id}}
                 >
                   ({{attachment.informationAsset.title}})
                 </AuLink>
+              {{else}}
+                Process
               {{/if}}
             </td>
             <td>
