refactor: show the diagram versions sidebar on the right (like we did with ICR)
Refs: oph-918

--- a/app/templates/processes/process/diagrams.hbs
+++ b/app/templates/processes/process/diagrams.hbs
@@ -15,7 +15,7 @@
     </AuButton>
   </:action>
 </PageHeader>
-<SidebarContainer class="diagrams">
+<SidebarContainer class="diagrams au-u-flex--row-reverse">
   <:sidebar>
     <div class="au-c-sidebar background-white thin-scrollbar">
       <div>
@@ -67,7 +67,7 @@
           {{date-format this.selectedDiagramList.modified true}}</AuPill>
       </Group>
     </AuToolbar>
-    <div class="au-o-box">
+    <div class="au-o-box au-u-padding-top-none">
       <p class="au-u-h4 au-u-medium au-u-margin-bottom">Diagrammen</p>
       <DiagramList::Table
         @diagramList={{this.selectedDiagramList}}
