feat: create new diagrams.diagram router
- Diagram list item table is showing a button to detail instead of remove
- show metadata of the diagram in a card
- Add sidebar where we will show the processes this diagram is used

Refs: oph-862

--- a/app/components/diagram-list/table.hbs
+++ b/app/components/diagram-list/table.hbs
@@ -40,8 +40,13 @@
           </AuButton>
         </td>
         <td>
-          <AuButton @skin="naked">Detail
-          </AuButton>
+          <AuLink
+            @route="diagrams.diagram.index"
+            @skin="button-naked"
+            @model={{diagram.id}}
+          >
+            Detail
+          </AuLink>
         </td>
       </c.body>
     {{/if}}
