--- a/app/templates/diagrams/diagram/index.hbs
+++ b/app/templates/diagrams/diagram/index.hbs
@@ -80,7 +80,17 @@
             <AuLink @route="processes">processen</AuLink>
           </h2>
           <AuHr @size="default" class="au-u-margin-top-small" />
-          <p class="au-u-margin-top-small">Geen processen gevonden</p>
+          {{#if (eq @model.linkedProcesses.length 0)}}
+            <p class="au-u-margin-top-small">Geen processen gevonden</p>
+          {{else}}
+            {{#each @model.linkedProcesses as |process|}}
+              <AuPill class="au-u-margin-top-small">
+                <AuLink @route="processes.process" @model={{process.id}}>
+                  {{process.title}}
+                </AuLink>
+              </AuPill>
+            {{/each}}
+          {{/if}}
         </AuContent>
       </div>
     </aside>
