--- a/app/components/diagram-list/table.hbs
+++ b/app/components/diagram-list/table.hbs
@@ -53,7 +53,8 @@
   </row.content>
 </AuDataTable>
 
-<File::DownloadModal
+<File::Download
+  @showAsModal={{true}}
   @isModalOpen={{this.fileToDownload}}
   @onModalClosed={{fn (mut this.fileToDownload) undefined}}
   @onDownloadSuccesful={{this.onFileDownloadedSuccessful}}
