--- a/app/templates/diagrams/diagram/index.hbs
+++ b/app/templates/diagrams/diagram/index.hbs
@@ -3,6 +3,15 @@
 <PageHeader>
   <:title>
     <div class="au-u-flex au-u-flex--vertical-center">
+      <AuLink
+        @skin="naked"
+        @icon="arrow-left"
+        @iconAlignment="left"
+        @size="large"
+        @hideText={{true}}
+        class="au-u-margin-right-small animate-left"
+        {{on "click" this.goToPreviousRoute}}
+      >Previous</AuLink>
       {{@model.file.name}}
       <AuButton
         class="au-u-padding-left-small"
@@ -93,10 +102,7 @@
             Download
           </h2>
           <AuHr @size="default" class="au-u-margin-top-small" />
-          <File::Download
-            @showAsButtons={{true}}
-            @fileModel={{@model.file}}
-          />
+          <File::Download @showAsButtons={{true}} @fileModel={{@model.file}} />
         </AuContent>
       </div>
     </aside>
