feat: add filters for information assets including availability, integrity, and confidentiality scores

--- a/app/components/process/attachments.hbs
+++ b/app/components/process/attachments.hbs
@@ -107,6 +107,10 @@
                 >
                   ({{attachment.informationAsset.title}})
                 </AuLink>
+              {{else}}
+                <AuLink @route="processes.process" @model={{@process.id}}>
+                  ({{@process.title}})
+                </AuLink>
               {{/if}}
             </td>
             <td>
