--- a/app/components/process/icr-card/score.hbs
+++ b/app/components/process/icr-card/score.hbs
@@ -1,4 +1,4 @@
-<div class="icr-score">
+<div class="icr-score" id="{{@id}}">
   {{#each this.allowedScores as |score|}}
     {{#if (and @onScoreChange (not @readonly))}}
       {{! template-lint-disable no-invalid-interactive }}
