refactor: create event tracking service where we can track with plausible
Refs: oph-862

--- a/app/templates/diagrams/diagram/index.hbs
+++ b/app/templates/diagrams/diagram/index.hbs
@@ -105,7 +105,11 @@
             Download
           </h2>
           <AuHr @size="default" class="au-u-margin-top-small" />
-          <File::Download @showAsButtons={{true}} @fileModel={{@model.file}} />
+          <File::Download
+            @showAsButtons={{true}}
+            @fileModel={{@model.file}}
+            @onDownloadSuccesful={{this.onFileDownloadedSuccessful}}
+          />
         </AuContent>
       </div>
     </aside>
