--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -31,5 +31,6 @@
 @import 'components/c-footer';
 @import 'components/c-favorite';
 @import 'components/c-tooltip';
+@import 'components/c-wizard';
 @import 'shame';
 @import 'diagrams';
