fix: links and attachments are not passed on edit information asset

--- a/app/templates/information-assets/edit.hbs
+++ b/app/templates/information-assets/edit.hbs
@@ -279,7 +279,7 @@
       <br />
       <Icr::Attachments
         @canEdit={{this.canEdit}}
-        @informationAsset={{this.informationAsset}}
+        @informationAsset={{@model}}
       />
     </div>
     <aside class="au-o-grid__item au-u-2-6@medium">
