feat: extract dropzone to component + start using it in the wizard
Refs: oph-904

--- a/app/components/process/wizard.hbs
+++ b/app/components/process/wizard.hbs
@@ -4,6 +4,13 @@
   </:title>
   <:body>
 
+    {{#if (eq this.activeStepIndex 1)}}
+      <File::Dropzone
+        @multiple={{true}}
+        @accept=".bpmn,.vsdx"
+        @onFileUploaded={{this.addFileToUploadedList}}
+      />
+    {{/if}}
   </:body>
   <:footer>
     <AuToolbar as |Group|>
