OPH-903 | Bring back download functionality for diagrams (#171)
* refactor: models are updated + new list & listItem model

Refs: oph-860

* feat: can replace a diagram of an existing process

Refs: oph-860

* Oph-763 | Upload multiple diagrams (#165)

* feat: create new page where we show all diagrams

Refs: oph-861

* feat: create file viewer + metadata-card component

Refs: oph-861

* feat: show table with diagram files in diagram-list

Refs: oph-861

* feat: make the title of the diagram file in the diagram-list clickable

Refs: oph-861

* feat: show a lock on older versions and you can only edit the current one

Refs: oph-861

* refactor: remove tests that are not used

Refs: oph-861

* refactor: creating a new process can now be done with multiple diagram files

Refs : oph-763

* refactor: update diagrams on a process (vervang) is also possible

This with the bug that the latest diagram is not loaded in the viewer without a refresh

Refs: oph-763

* fix: the sorting of the diagram lists

Refs: oph-763

* fix: diagram file not loaded on process page because of filtering

Refs: oph-763

* fix: when removed a file from the list it will re open the lists first diagramfile

Refs: oph-763

* fix: the showcased file is the same as the first on the diagram list overview page (by position)

Refs: oph-763

* fix: fetch latest list when upload is done

Refs: ph-763

* refactor: extract the bpmn elements again on upload of files

Refs: oph-763

* Oph-781 | Add tabs for multiple diagrams (#168)

* feat: create component to show the diagrams in tabs

Refs: oph-781

* refactor: diagrams page to use the new custom diagram classes

Refs: oph-781

* refactor: use the diagrams as tabs component instead of process:visual on process detail page

Refs: oph-781

* feat: make the scrollbar thinner

Refs: oph-781

* refactor: move the header out of the diagrams as tabs component

Refs: oph-781

* refactor: make breadcrum of diagrams page "diagrammen"

Refs: oph-781

* fix: linting iss

--- a/app/components/diagram-list/table.hbs
+++ b/app/components/diagram-list/table.hbs
@@ -1,8 +1,6 @@
 <div ...attributes>
   <AuDataTable
     @content={{this.activeDiagrams}}
-    @page={{this.page}}
-    @size={{this.size}}
     @fields="name created size"
     @noDataMessage="Geen diagrammen gevonden"
     as |row|
@@ -41,7 +39,7 @@
               @skin="link"
               @width="block"
               @hideText="true"
-              {{on "click" (fn this.downloadFile diagram.diagramFile)}}
+              {{on "click" (fn (mut this.fileToDownload) diagram.diagramFile)}}
             >Download</AuButton>
           </td>
           {{#if @canEdit}}
@@ -102,3 +100,10 @@
     </AuButtonGroup>
   </:footer>
 </AuModal>
+
+<File::DownloadModal
+  @isModalOpen={{this.fileToDownload}}
+  @onModalClosed={{fn (mut this.fileToDownload) undefined}}
+  @onDownloadSuccesful={{this.onFileDownloadedSuccessful}}
+  @fileModel={{this.fileToDownload}}
+/>
