feat: also show the side border in the table when the file is selected
Refs: oph-862

--- a/app/components/diagram-list/table.hbs
+++ b/app/components/diagram-list/table.hbs
@@ -21,7 +21,13 @@
       </TableMessage>
     {{else}}
       <c.body as |diagram|>
-        <td>
+        <td
+          class="{{if
+              (eq diagram.diagramFile.id @selectedDiagramFile.id)
+              'border-left-selected'
+              ''
+            }}"
+        >
           <AuButton
             @skin="link"
             {{on "click" (fn @onDiagramFileSelected diagram.diagramFile)}}
