--- a/app/templates/processes/process/diagrams.hbs
+++ b/app/templates/processes/process/diagrams.hbs
@@ -63,6 +63,7 @@
     <div style="min-height:30vh">
       <DiagramList::Table
         @diagramList={{this.selectedDiagramList}}
+        @selectedDiagramFile={{this.selectedDiagramFile}}
         @onDiagramFileSelected={{this.openDiagramFile}}
         @canEdit={{this.canEditFilesInTable}}
         @canDeleteLastItem={{false}}
