fix: add a transparent border so the content does not jump on select tab or file.

--- a/app/components/diagram-list/table.hbs
+++ b/app/components/diagram-list/table.hbs
@@ -25,7 +25,7 @@
           class="{{if
               (eq diagram.diagramFile.id @selectedDiagramFile.id)
               'border-left-selected'
-              ''
+              'border-left-transparent'
             }}"
         >
           <AuButton
