--- a/app/templates/processes/process/diagrams.hbs
+++ b/app/templates/processes/process/diagrams.hbs
@@ -26,7 +26,7 @@
               {{if
                 (eq this.selectedDiagramList.id diagramList.id)
                 'background-gray border-left-selected'
-                'background-white'
+                'background-white border-left-transparent'
               }}"
             style="border:1.5px solid var(--au-gray-200); "
           >
